# gossip

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  .prettierignore  DEV-GUIDE.md  IMPLEMENTATION_CHECKLIST.md  MULTI_BLOCK_ARCHITECTURE.md  README.md  TERMS_OF_SERVICE.md  TODO.md  WASM_MIGRATION_ANALYSIS.md  capacitor.config.ts  deweb_cli_config.dev.buildnet.json  deweb_cli_config.main.buildnet.json  deweb_cli_config.main.mainnet.json  deweb_cli_config.mainnet.json  eslint.config.js  index.html  package-lock.json  package.json  review.local.md  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
.github/workflows/: build-and-deploy.yml  deweb-dev.yml  deweb-main.yml  deweb.yml  fastlane-android.yml  fastlane.yml  format.yml  gossip-sdk-publish-dev.yml  gossip-sdk-publish-release.yml  ios-build.yml  rust-wasm.yml  tests.yml
.maestro/: README.md  biometric_login.yaml  keyboard_android.yaml  keyboard_ios.yaml  qr_scanner.yaml  safe_area_notch.yaml
.maestro/config/: android.yaml  ios.yaml
android/: Gemfile  capacitor.settings.gradle  gradle.properties  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
android/fastlane/: Appfile  Fastfile
bot/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
bot/src/: ai.ts  bot.ts  config.ts  get-user-id.ts  index.ts
docs/plans/: 2026-03-23-two-layer-messages.md
gossip-sdk/: README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
gossip-sdk/drizzle/: 0000_fixed_hawkeye.sql  0000_nifty_molly_hayes.sql  0001_flowery_storm.sql  0001_messages_edit_of.sql  0002_discussions_pinned.sql  0003_messages_reaction_of.sql  0004_discussions_retention.sql  0005_discussions_muted.sql
gossip-sdk/examples/: node-demo.ts  node-messaging-demo.ts
gossip-sdk/scripts/: embed-migrations.ts
gossip-sdk/src/: account.ts  announcements.ts  auth.ts  contacts.ts  db.ts  discussions.ts  gossip.ts  gossipSdk.ts  index.ts  messages.ts  schema.ts  sdk.ts  sqlite.ts  sw.ts  types.ts  utils.ts  wa-sqlite-vfs.d.ts  wallet.ts
gossip-sdk/test/: account.test.ts  announcement-service.test.ts  announcements.test.ts  auth-service.test.ts  auth.test.ts  auto-accept.test.ts  contacts-utils.test.ts  contacts.test.ts  db-helpers.test.ts  db-operations.test.ts  db-simple.test.ts  discussion-flow.test.ts  discussion-service.test.ts  discussions-utils.test.ts  discussions.test.ts  edge-cases.test.ts  gossip-sdk-lifecycle.test.ts  helpers.ts  high-priority-gaps.test.ts  index.test.ts  message-deduplication.test.ts  message-serialization.test.ts  message-service.test.ts  messages.test.ts  protocol-config.test.ts  queue-utils.test.ts  refresh-service.test.ts  renewal-resends-unacknowledged.test.ts  sdk-config.test.ts  sending-reset.test.ts  session-persistence.test.ts  setup.ts  startup-recovery.test.ts  testDb.ts  user-id-utils.test.ts  utils.ts  validation-utils.test.ts  waiting-session-after-accept.test.ts  wallet.test.ts
gossip-storage/rust/: Cargo.toml
gossip-storage/rust/src/: blob.rs  block.rs  block_manager.rs  config.rs  crypto.rs  fs.rs  lib.rs  session.rs  wasm.rs
gossip-storage/rust/tests/: chat_app_scenarios.rs  security_tests.rs
gossip-storage/ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
ios/App/: Gemfile  Podfile
patches/: @capacitor+ios+8.0.0.patch
public/: _redirects
public/favicon/: site.webmanifest
public/runners/: background-sync.js
scripts/: audit-logging.mjs  build-all.sh  build-native-android.sh  build-native-ios.sh  build-native.sh  build-wasm-secure.sh  dev-all.sh  dev-android.sh  dev-ios.sh  dev-scan.sh  ios-deploy-fallback.sh  publish-dev.sh  publish.sh  release.mjs  run-ios-device.mjs  run-ios-device.sh  setup-dev.sh  strip-service-worker-console.mjs
scripts/lib/: ios.sh
src/: App.tsx  EncryptedStorageTest.tsx  PWABadge.tsx  db.ts  index.css  main.tsx  sdk.ts  storage-worker.ts  sw-bridge.ts  sw.ts
src/api/: messageProtocol.ts
src/components/: AppUrlListener.tsx  DeepLinkHandler.tsx  InitErrorScreen.tsx  InviteRoute.tsx  OnboardingFlow.tsx  ToS.tsx  ToSAcceptance.tsx  utils.ts
src/config/: features.ts  protocol.ts  secureStorage.ts  sync.ts  version.ts
src/constants/: biometric.ts  links.ts  pageConfig.ts  routes.ts
src/context/: theme-context.tsx  theme-provider.tsx
src/crypto/: bip39.ts  discussionInit.ts  encryption.ts  webauthn.ts
src/hooks/: useAccountCreationForm.ts  useAccountInfo.ts  useAppInit.ts  useAppStateRefresh.ts  (+43 more)
test/: README.md  discussion_service.spec.ts  message_service.browser.spec.ts  setup.browser.ts  setup.shared.ts  setup.ts  utils.ts
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/auth/: Cargo.toml
wasm/auth/src/: lib.rs  types.rs
wasm/bordercrypt/: Cargo.toml
wasm/bordercrypt/src/: block.rs  constants.rs  domain.rs  error.rs  kdf.rs  keypair.rs  lib.rs  lifecycle.rs  pq.rs  read.rs  storage.rs  types.rs  unlock.rs  wasm_api.rs  write.rs
wasm/bordercrypt/tests/: e2e.rs
wasm/crypto-aead/src/: lib.rs
wasm/crypto-agraphon/src/: agraphon.rs  history.rs
wasm/crypto-dsa/: Cargo.toml
wasm/crypto-kdf/: Cargo.toml
wasm/crypto-kdf/src/: lib.rs
wasm/crypto-kem/: Cargo.toml
wasm/main/: README.md
wasm/main/src/: lib.rs
wasm/secure-storage/: Cargo.toml  SPEC_DEVIATIONS.md
wasm/secure-storage/.cargo/: config.toml
wasm/secure-storage/src/: block.rs  constants.rs  domain.rs  error.rs  js_num.rs  kdf.rs  keypair.rs  lib.rs  lifecycle.rs  native_api.rs  pq.rs  read.rs  sqlite_handle.rs  storage.rs  types.rs  unlock.rs  wal.rs  wasm_api.rs  write.rs
wasm/secure-storage/src/db/: mod.rs
wasm/secure-storage/src/vfs/: encrypted_vfs.rs  file_core.rs  fs_wal_storage.rs  idb_state.rs  idb_storage.rs  idb_vfs.rs  memory_vfs.rs  mod.rs  native_vfs.rs  opfs_storage.rs  opfs_wal_storage.rs  pending.rs  redb_storage.rs  sqlite_vfs.rs
wasm/secure-storage/tests/: bench_write.rs  e2e.rs
wasm/sessions/src/: lib.rs  session.rs  session_manager.rs
wasm/uniffi-bindgen/: Cargo.toml
(+693 files in other folders)
