[package]
name = "bordercrypt"
version.workspace = true
edition.workspace = true

[dependencies]
crypto-aead = { path = "../crypto-aead" }
crypto-kdf = { path = "../crypto-kdf" }
crypto-password-kdf = { path = "../crypto-password-kdf" }
pq-rerand = { git = "https://github.com/massalabs/pq-rerand", rev = "1d5f9d1afd6f06383fffc0aa3a362774ba35d45f" }
rand = "0.8"
thiserror = "2"
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3"
