[package]
name = "secureStorage"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:indexed_db_futures",
    "dep:console_error_panic_hook",
    "dep:sqlite-wasm-rs",
    "dep:wasm-bindgen-rayon",
]

[dependencies]
crypto-aead = { path = "../crypto-aead" }
crypto-kdf = { path = "../crypto-kdf" }
crypto-password-kdf = { path = "../crypto-password-kdf" }
pq-rerand = { git = "https://github.com/massalabs/pq-rerand", rev = "1d5f9d1afd6f06383fffc0aa3a362774ba35d45f" }
rand = "0.8"
rayon = "1.10"
thiserror = "2"
zeroize = { version = "1.8", features = ["derive"] }

# WASM-only (optional, gated behind `wasm` feature)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
indexed_db_futures = { version = "0.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
sqlite-wasm-rs = { version = "0.5", optional = true }
wasm-bindgen-rayon = { version = "1.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3"
